erDiagram
    "auth.users" {
        uuid id PK
        varchar name UK
        user_role role
        jsonb settings
    }

    posts {
        uuid id PK
        varchar title "Post title"
        text content
        uuid created_by FK
    }
    posts }o--|| "auth.users" : created_by

    comments {
        uuid id PK
        text content
        varchar item_kind
        uuid item_id FK
    }
    comments }o--|| "auth.users" : item_id
    comments }o--|| posts : item_id

    post_members {
        uuid post_id
        int user_id
        varchar(10) role
    }

    post_member_details {
        uuid post_id
        int user_id
        int added_by FK
    }
    post_member_details }o--|| "auth.users" : added_by
    post_member_details }o--|| post_members : post_id

    admins
